// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`User .getUserData gets stored values 1`] = `
Object {
  "preferred": Object {
    "API_URL": "https://sentry.io/api",
    "DSN": "https://test1:test1@sentry.io/test1",
    "MINIDUMP_URL": "https://sentry.io/api/test1/minidump/?sentry_key=test1",
    "ORG_ID": "1",
    "ORG_NAME": "test1",
    "PROJECT_ID": "1",
    "PROJECT_NAME": "test1",
    "PUBLIC_DSN": "https://test1@sentry.io/test1",
    "PUBLIC_KEY": "test1",
    "SECRET_KEY": "test1",
    "UNREAL_URL": "https://sentry.io/api/test1/unreal/test1/",
    "group": "test1",
    "id": 1,
  },
  "projects": Array [
    Object {
      "API_URL": "https://sentry.io/api",
      "DSN": "https://test1:test1@sentry.io/test1",
      "MINIDUMP_URL": "https://sentry.io/api/test1/minidump/?sentry_key=test1",
      "ORG_ID": "1",
      "ORG_NAME": "test1",
      "PROJECT_ID": "1",
      "PROJECT_NAME": "test1",
      "PUBLIC_DSN": "https://test1@sentry.io/test1",
      "PUBLIC_KEY": "test1",
      "SECRET_KEY": "test1",
      "UNREAL_URL": "https://sentry.io/api/test1/unreal/test1/",
      "group": "test1",
      "id": 1,
    },
    Object {
      "API_URL": "https://sentry.io/api",
      "DSN": "https://test2:test2@sentry.io/test2",
      "MINIDUMP_URL": "https://sentry.io/api/test2/minidump/?sentry_key=test2",
      "ORG_ID": "2",
      "ORG_NAME": "test2",
      "PROJECT_ID": "2",
      "PROJECT_NAME": "test2",
      "PUBLIC_DSN": "https://test2@sentry.io/test2",
      "PUBLIC_KEY": "test2",
      "SECRET_KEY": "test2",
      "UNREAL_URL": "https://sentry.io/api/test2/unreal/test2/",
      "group": "test2",
      "id": 2,
    },
  ],
  "user": Object {
    "avatarUrl": "https://foo.bar.com",
    "id": 1,
    "isAuthenticated": true,
    "name": "Test User",
  },
}
`;

exports[`User .getUserData has default values 1`] = `
Object {
  "preferred": Object {
    "API_URL": "https://sentry.io/api",
    "DSN": "https://&lt;key&gt;:&lt;secret&gt;@&lt;organization&gt;.ingest.sentry.io/&lt;project&gt;",
    "MINIDUMP_URL": "https://&lt;organization&gt;.ingest.sentry.io/api/&lt;project&gt;/minidump/?sentry_key=&lt;key&gt;",
    "ORG_ID": "-1",
    "ORG_NAME": "your-org",
    "PROJECT_ID": "-1",
    "PROJECT_NAME": "your-project",
    "PUBLIC_DSN": "https://&lt;key&gt;@&lt;organization&gt;.ingest.sentry.io/&lt;project&gt;",
    "PUBLIC_KEY": "&lt;key&gt;",
    "SECRET_KEY": "&lt;secret&gt;",
    "UNREAL_URL": "https://&lt;organization&gt;.ingest.sentry.io/api/&lt;project&gt;/unreal/&lt;key&gt;/",
    "group": "your-org",
    "id": -1,
  },
  "projects": Array [
    Object {
      "API_URL": "https://sentry.io/api",
      "DSN": "https://&lt;key&gt;:&lt;secret&gt;@&lt;organization&gt;.ingest.sentry.io/&lt;project&gt;",
      "MINIDUMP_URL": "https://&lt;organization&gt;.ingest.sentry.io/api/&lt;project&gt;/minidump/?sentry_key=&lt;key&gt;",
      "ORG_ID": "-1",
      "ORG_NAME": "your-org",
      "PROJECT_ID": "-1",
      "PROJECT_NAME": "your-project",
      "PUBLIC_DSN": "https://&lt;key&gt;@&lt;organization&gt;.ingest.sentry.io/&lt;project&gt;",
      "PUBLIC_KEY": "&lt;key&gt;",
      "SECRET_KEY": "&lt;secret&gt;",
      "UNREAL_URL": "https://&lt;organization&gt;.ingest.sentry.io/api/&lt;project&gt;/unreal/&lt;key&gt;/",
      "group": "your-org",
      "id": -1,
    },
  ],
  "user": Object {
    "isAuthenticated": false,
  },
}
`;

exports[`User .setUserData overwrites corrupt storage 1`] = `
Object {
  "preferred": Object {
    "dsn": "https://test2:test2@sentry.io/test2",
    "dsnPublic": "https://test2@sentry.io/test2",
    "id": 2,
    "name": "Test2",
    "organizationId": 2,
    "organizationName": "Test2",
    "organizationSlug": "test2",
    "projectName": "Test2",
    "projectSlug": "test2",
    "publicKey": "test2",
    "secretKey": "test2",
    "teamName": "Test2",
  },
  "projects": Array [
    Object {
      "dsn": "https://test2:test2@sentry.io/test2",
      "dsnPublic": "https://test2@sentry.io/test2",
      "id": 2,
      "name": "Test2",
      "organizationId": 2,
      "organizationName": "Test2",
      "organizationSlug": "test2",
      "projectName": "Test2",
      "projectSlug": "test2",
      "publicKey": "test2",
      "secretKey": "test2",
      "teamName": "Test2",
    },
  ],
  "user": Object {
    "isAuthenticated": false,
  },
}
`;

exports[`User .setUserData picks a default preference 1`] = `
Object {
  "preferred": Object {
    "dsn": "https://test1:test1@sentry.io/test1",
    "dsnPublic": "https://test1@sentry.io/test1",
    "id": 1,
    "name": "Test1",
    "organizationId": 1,
    "organizationName": "Test1",
    "organizationSlug": "test1",
    "projectName": "Test1",
    "projectSlug": "test1",
    "publicKey": "test1",
    "secretKey": "test1",
    "teamName": "Test1",
  },
  "projects": Array [
    Object {
      "dsn": "https://test1:test1@sentry.io/test1",
      "dsnPublic": "https://test1@sentry.io/test1",
      "id": 1,
      "name": "Test1",
      "organizationId": 1,
      "organizationName": "Test1",
      "organizationSlug": "test1",
      "projectName": "Test1",
      "projectSlug": "test1",
      "publicKey": "test1",
      "secretKey": "test1",
      "teamName": "Test1",
    },
    Object {
      "dsn": "https://test2:test2@sentry.io/test2",
      "dsnPublic": "https://test2@sentry.io/test2",
      "id": 2,
      "name": "Test2",
      "organizationId": 2,
      "organizationName": "Test2",
      "organizationSlug": "test2",
      "projectName": "Test2",
      "projectSlug": "test2",
      "publicKey": "test2",
      "secretKey": "test2",
      "teamName": "Test2",
    },
  ],
  "user": Object {
    "isAuthenticated": false,
  },
}
`;

exports[`User .setUserData sets default values 1`] = `
Object {
  "preferred": Object {
    "dsn": "https://<key>:<secret>@<organization>.ingest.sentry.io/<project>",
    "dsnPublic": "https://<key>@<organization>.ingest.sentry.io/<project>",
    "id": -1,
    "organizationId": -1,
    "organizationSlug": "your-org",
    "projectName": "your-project",
    "projectSlug": "your-project",
    "publicKey": "<key>",
    "secretKey": "<secret>",
  },
  "projects": Array [
    Object {
      "dsn": "https://<key>:<secret>@<organization>.ingest.sentry.io/<project>",
      "dsnPublic": "https://<key>@<organization>.ingest.sentry.io/<project>",
      "id": -1,
      "organizationId": -1,
      "organizationSlug": "your-org",
      "projectName": "your-project",
      "projectSlug": "your-project",
      "publicKey": "<key>",
      "secretKey": "<secret>",
    },
  ],
  "user": Object {
    "isAuthenticated": false,
  },
}
`;

exports[`User .setUserData sets new values 1`] = `
Object {
  "preferred": Object {
    "dsn": "https://test2:test2@sentry.io/test2",
    "dsnPublic": "https://test2@sentry.io/test2",
    "id": 2,
    "name": "Test2",
    "organizationId": 2,
    "organizationName": "Test2",
    "organizationSlug": "test2",
    "projectName": "Test2",
    "projectSlug": "test2",
    "publicKey": "test2",
    "secretKey": "test2",
    "teamName": "Test2",
  },
  "projects": Array [
    Object {
      "dsn": "https://test1:test1@sentry.io/test1",
      "dsnPublic": "https://test1@sentry.io/test1",
      "id": 1,
      "name": "Test1",
      "organizationId": 1,
      "organizationName": "Test1",
      "organizationSlug": "test1",
      "projectName": "Test1",
      "projectSlug": "test1",
      "publicKey": "test1",
      "secretKey": "test1",
      "teamName": "Test1",
    },
    Object {
      "dsn": "https://test2:test2@sentry.io/test2",
      "dsnPublic": "https://test2@sentry.io/test2",
      "id": 2,
      "name": "Test2",
      "organizationId": 2,
      "organizationName": "Test2",
      "organizationSlug": "test2",
      "projectName": "Test2",
      "projectSlug": "test2",
      "publicKey": "test2",
      "secretKey": "test2",
      "teamName": "Test2",
    },
  ],
  "user": Object {
    "isAuthenticated": false,
  },
}
`;

exports[`User .setUserData substitudes valid preferences 1`] = `
Object {
  "preferred": Object {
    "dsn": "https://test2:test2@sentry.io/test2",
    "dsnPublic": "https://test2@sentry.io/test2",
    "id": 2,
    "name": "Test2",
    "organizationId": 2,
    "organizationName": "Test2",
    "organizationSlug": "test2",
    "projectName": "Test2",
    "projectSlug": "test2",
    "publicKey": "test2",
    "secretKey": "test2",
    "teamName": "Test2",
  },
  "projects": Array [
    Object {
      "dsn": "https://test2:test2@sentry.io/test2",
      "dsnPublic": "https://test2@sentry.io/test2",
      "id": 2,
      "name": "Test2",
      "organizationId": 2,
      "organizationName": "Test2",
      "organizationSlug": "test2",
      "projectName": "Test2",
      "projectSlug": "test2",
      "publicKey": "test2",
      "secretKey": "test2",
      "teamName": "Test2",
    },
  ],
  "user": Object {
    "isAuthenticated": false,
  },
}
`;

exports[`User constructDSNObject has default 1`] = `
Object {
  "API_URL": "https://sentry.io/api",
  "DSN": "https://&lt;key&gt;:&lt;secret&gt;@&lt;organization&gt;.ingest.sentry.io/&lt;project&gt;",
  "MINIDUMP_URL": "https://&lt;organization&gt;.ingest.sentry.io/api/&lt;project&gt;/minidump/?sentry_key=&lt;key&gt;",
  "ORG_ID": "-1",
  "ORG_NAME": "your-org",
  "PROJECT_ID": "-1",
  "PROJECT_NAME": "your-project",
  "PUBLIC_DSN": "https://&lt;key&gt;@&lt;organization&gt;.ingest.sentry.io/&lt;project&gt;",
  "PUBLIC_KEY": "&lt;key&gt;",
  "SECRET_KEY": "&lt;secret&gt;",
  "UNREAL_URL": "https://&lt;organization&gt;.ingest.sentry.io/api/&lt;project&gt;/unreal/&lt;key&gt;/",
  "group": "your-org",
  "id": -1,
}
`;

exports[`User constructDSNObject works 1`] = `
Object {
  "API_URL": "https://sentry.io/api",
  "DSN": "https://test1:test1@sentry.io/test1",
  "MINIDUMP_URL": "https://sentry.io/api/test1/minidump/?sentry_key=test1",
  "ORG_ID": "1",
  "ORG_NAME": "test1",
  "PROJECT_ID": "1",
  "PROJECT_NAME": "test1",
  "PUBLIC_DSN": "https://test1@sentry.io/test1",
  "PUBLIC_KEY": "test1",
  "SECRET_KEY": "test1",
  "UNREAL_URL": "https://sentry.io/api/test1/unreal/test1/",
  "group": "test1",
  "id": 1,
}
`;
